--- a/crds/prometheus-operator/v0.76.1.monitoring.coreos.com_servicemonitors.yaml
+++ b/crds/prometheus-operator/v0.76.1.monitoring.coreos.com_servicemonitors.yaml
@@ -4,34 +4,34 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.15.0
-    operator.prometheus.io/version: 0.76.0
-  name: podmonitors.monitoring.coreos.com
+    operator.prometheus.io/version: 0.76.1
+  name: servicemonitors.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
   names:
     categories:
     - prometheus-operator
-    kind: PodMonitor
-    listKind: PodMonitorList
-    plural: podmonitors
+    kind: ServiceMonitor
+    listKind: ServiceMonitorList
+    plural: servicemonitors
     shortNames:
-    - pmon
-    singular: podmonitor
+    - smon
+    singular: servicemonitor
   scope: Namespaced
   versions:
   - name: v1
     schema:
       openAPIV3Schema:
         description: |-
-          The `PodMonitor` custom resource definition (CRD) defines how `Prometheus` and `PrometheusAgent` can scrape metrics from a group of pods.
+          The `ServiceMonitor` custom resource definition (CRD) defines how `Prometheus` and `PrometheusAgent` can scrape metrics from a group of services.
           Among other things, it allows to specify:
-          * The pods to scrape via label selectors.
+          * The services to scrape via label selectors.
           * The container ports to scrape.
           * Authentication credentials to use.
           * Target and metric relabeling.
 
 
-          `Prometheus` and `PrometheusAgent` objects select `PodMonitor` objects using label and namespace selectors.
+          `Prometheus` and `PrometheusAgent` objects select `ServiceMonitor` objects using label and namespace selectors.
         properties:
           apiVersion:
             description: |-
@@ -51,8 +51,9 @@ spec:
           metadata:
             type: object
           spec:
-            description: Specification of desired Pod selection for target discovery
-              by Prometheus.
+            description: |-
+              Specification of desired Service selection for target discovery by
+              Prometheus.
             properties:
               attachMetadata:
                 description: |-
@@ -60,7 +61,7 @@ spec:
                   discovered targets.
 
 
-                  It requires Prometheus >= v2.35.0.
+                  It requires Prometheus >= v2.37.0.
                 properties:
                   node:
                     description: |-
@@ -81,75 +82,14 @@ spec:
                   It requires Prometheus >= v2.28.0.
                 pattern: (^0|([0-9]*[.])?[0-9]+((K|M|G|T|E|P)i?)?B)$
                 type: string
-              jobLabel:
+              endpoints:
                 description: |-
-                  The label to use to retrieve the job name from.
-                  `jobLabel` selects the label from the associated Kubernetes `Pod`
-                  object which will be used as the `job` label for all metrics.
-
-
-                  For example if `jobLabel` is set to `foo` and the Kubernetes `Pod`
-                  object is labeled with `foo: bar`, then Prometheus adds the `job="bar"`
-                  label to all ingested metrics.
-
-
-                  If the value of this field is empty, the `job` label of the metrics
-                  defaults to the namespace and name of the PodMonitor object (e.g. `<namespace>/<name>`).
-                type: string
-              keepDroppedTargets:
-                description: |-
-                  Per-scrape limit on the number of targets dropped by relabeling
-                  that will be kept in memory. 0 means no limit.
-
-
-                  It requires Prometheus >= v2.47.0.
-                format: int64
-                type: integer
-              labelLimit:
-                description: |-
-                  Per-scrape limit on number of labels that will be accepted for a sample.
-
-
-                  It requires Prometheus >= v2.27.0.
-                format: int64
-                type: integer
-              labelNameLengthLimit:
-                description: |-
-                  Per-scrape limit on length of labels name that will be accepted for a sample.
-
-
-                  It requires Prometheus >= v2.27.0.
-                format: int64
-                type: integer
-              labelValueLengthLimit:
-                description: |-
-                  Per-scrape limit on length of labels value that will be accepted for a sample.
-
-
-                  It requires Prometheus >= v2.27.0.
-                format: int64
-                type: integer
-              namespaceSelector:
-                description: |-
-                  `namespaceSelector` defines in which namespace(s) Prometheus should discover the pods.
-                  By default, the pods are discovered in the same namespace as the `PodMonitor` object but it is possible to select pods across different/all namespaces.
-                properties:
-                  any:
-                    description: |-
-                      Boolean describing whether all namespaces are selected in contrast to a
-                      list restricting them.
-                    type: boolean
-                  matchNames:
-                    description: List of namespace names to select from.
-                    items:
-                      type: string
-                    type: array
-                type: object
-              podMetricsEndpoints:
-                description: Defines how to scrape metrics from the selected pods.
+                  List of endpoints part of this ServiceMonitor.
+                  Defines how to scrape metrics from Kubernetes [Endpoints](https://kubernetes.io/docs/concepts/services-networking/service/#endpoints) objects.
+                  In most cases, an Endpoints object is backed by a Kubernetes [Service](https://kubernetes.io/docs/concepts/services-networking/service/) object with the same name and labels.
                 items:
                   description: |-
-                    PodMetricsEndpoint defines an endpoint serving Prometheus metrics to be scraped by
+                    Endpoint defines an endpoint serving Prometheus metrics to be scraped by
                     Prometheus.
                   properties:
                     authorization:
@@ -263,11 +203,18 @@ spec:
                           type: object
                           x-kubernetes-map-type: atomic
                       type: object
+                    bearerTokenFile:
+                      description: |-
+                        File to read bearer token for scraping the target.
+
+
+                        Deprecated: use `authorization` instead.
+                      type: string
                     bearerTokenSecret:
                       description: |-
                         `bearerTokenSecret` specifies a key of a Secret containing the bearer
                         token for scraping targets. The secret needs to be in the same namespace
-                        as the PodMonitor object and readable by the Prometheus Operator.
+                        as the ServiceMonitor object and readable by the Prometheus Operator.
 
 
                         Deprecated: use `authorization` instead.
@@ -794,7 +741,7 @@ spec:
                         items:
                           type: string
                         type: array
-                      description: '`params` define optional HTTP URL parameters.'
+                      description: params define optional HTTP URL parameters.
                       type: object
                     path:
                       description: |-
@@ -805,7 +752,7 @@ spec:
                       type: string
                     port:
                       description: |-
-                        Name of the Pod port which this endpoint refers to.
+                        Name of the Service port which this endpoint refers to.
 
 
                         It takes precedence over `targetPort`.
@@ -948,11 +895,8 @@ spec:
                       - type: integer
                       - type: string
                       description: |-
-                        Name or number of the target port of the `Pod` object behind the Service, the
-                        port must be specified with container port property.
-
-
-                        Deprecated: use 'port' instead.
+                        Name or number of the target port of the `Pod` object behind the
+                        Service. The port must be specified with the container's port property.
                       x-kubernetes-int-or-string: true
                     tlsConfig:
                       description: TLS configuration to use when scraping the target.
@@ -1014,6 +958,10 @@ spec:
                               type: object
                               x-kubernetes-map-type: atomic
                           type: object
+                        caFile:
+                          description: Path to the CA cert in the Prometheus container
+                            to use for the targets.
+                          type: string
                         cert:
                           description: Client certificate to present when doing client-authentication.
                           properties:
@@ -1070,9 +1018,17 @@ spec:
                               type: object
                               x-kubernetes-map-type: atomic
                           type: object
+                        certFile:
+                          description: Path to the client cert file in the Prometheus
+                            container for the targets.
+                          type: string
                         insecureSkipVerify:
                           description: Disable target certificate validation.
                           type: boolean
+                        keyFile:
+                          description: Path to the client key file in the Prometheus
+                            container for the targets.
+                          type: string
                         keySecret:
                           description: Secret containing the client key file for the
                             targets.
@@ -1139,6 +1095,70 @@ spec:
                       type: boolean
                   type: object
                 type: array
+              jobLabel:
+                description: |-
+                  `jobLabel` selects the label from the associated Kubernetes `Service`
+                  object which will be used as the `job` label for all metrics.
+
+
+                  For example if `jobLabel` is set to `foo` and the Kubernetes `Service`
+                  object is labeled with `foo: bar`, then Prometheus adds the `job="bar"`
+                  label to all ingested metrics.
+
+
+                  If the value of this field is empty or if the label doesn't exist for
+                  the given Service, the `job` label of the metrics defaults to the name
+                  of the associated Kubernetes `Service`.
+                type: string
+              keepDroppedTargets:
+                description: |-
+                  Per-scrape limit on the number of targets dropped by relabeling
+                  that will be kept in memory. 0 means no limit.
+
+
+                  It requires Prometheus >= v2.47.0.
+                format: int64
+                type: integer
+              labelLimit:
+                description: |-
+                  Per-scrape limit on number of labels that will be accepted for a sample.
+
+
+                  It requires Prometheus >= v2.27.0.
+                format: int64
+                type: integer
+              labelNameLengthLimit:
+                description: |-
+                  Per-scrape limit on length of labels name that will be accepted for a sample.
+
+
+                  It requires Prometheus >= v2.27.0.
+                format: int64
+                type: integer
+              labelValueLengthLimit:
+                description: |-
+                  Per-scrape limit on length of labels value that will be accepted for a sample.
+
+
+                  It requires Prometheus >= v2.27.0.
+                format: int64
+                type: integer
+              namespaceSelector:
+                description: |-
+                  `namespaceSelector` defines in which namespace(s) Prometheus should discover the services.
+                  By default, the services are discovered in the same namespace as the `ServiceMonitor` object but it is possible to select pods across different/all namespaces.
+                properties:
+                  any:
+                    description: |-
+                      Boolean describing whether all namespaces are selected in contrast to a
+                      list restricting them.
+                    type: boolean
+                  matchNames:
+                    description: List of namespace names to select from.
+                    items:
+                      type: string
+                    type: array
+                type: object
               podTargetLabels:
                 description: |-
                   `podTargetLabels` defines the labels which are transferred from the
@@ -1183,7 +1203,7 @@ spec:
                 type: array
                 x-kubernetes-list-type: set
               selector:
-                description: Label selector to select the Kubernetes `Pod` objects
+                description: Label selector to select the Kubernetes `Endpoints` objects
                   to scrape metrics from.
                 properties:
                   matchExpressions:
@@ -1229,6 +1249,13 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              targetLabels:
+                description: |-
+                  `targetLabels` defines the labels which are transferred from the
+                  associated Kubernetes `Service` object onto the ingested metrics.
+                items:
+                  type: string
+                type: array
               targetLimit:
                 description: |-
                   `targetLimit` defines a limit on the number of scraped targets that will
@@ -1236,6 +1263,7 @@ spec:
                 format: int64
                 type: integer
             required:
+            - endpoints
             - selector
             type: object
         required:
