--- a/prometheus/Chart.yaml
+++ b/prometheus/Chart.yaml
@@ -52,26 +52,32 @@ dependencies:
     version: 5.3.0
     alias: prometheus-postgres-exporter
     condition: prometheus-postgres-exporter.enabled
-  #https://github.com/prometheus-community/helm-charts/tree/prometheus-blackbox-exporter-8.17.0/charts/prometheus-blackbox-exporter
+  #https://github.com/prometheus-community/helm-charts/tree/prometheus-blackbox-exporter-9.0.0/charts/prometheus-blackbox-exporter
   - name: prometheus-blackbox-exporter
     repository: https://prometheus-community.github.io/helm-charts
-    version: 8.17.0
+    version: 9.0.0
     alias: prometheus-blackbox-exporter
     condition: prometheus-blackbox-exporter.enabled
-  #https://github.com/prometheus-community/helm-charts/tree/prometheus-node-exporter-4.36.0/charts/prometheus-node-exporter
+  #https://github.com/prometheus-community/helm-charts/tree/prometheus-node-exporter-4.39.0/charts/prometheus-node-exporter
   - name: prometheus-node-exporter
     repository: https://prometheus-community.github.io/helm-charts
-    version: 4.37.0
+    version: 4.39.0
     alias: prometheus-node-exporter
     condition: prometheus-node-exporter.enabled
-  #https://github.com/bitnami/charts/tree/kube-state-metrics/4.2.5/bitnami/kube-state-metrics
+  #https://github.com/bitnami/charts/tree/kube-state-metrics/4.2.13/bitnami/kube-state-metrics
   - name: kube-state-metrics
-    version: 4.2.5
+    version: 4.2.13
     repository: oci://registry-1.docker.io/bitnamicharts
     condition: kube-state-metrics.enabled
-  #https://github.com/prometheus-community/helm-charts/tree/kube-prometheus-stack-60.4.0/charts/kube-prometheus-stack
+  #https://github.com/prometheus-community/helm-charts/tree/kube-prometheus-stack-62.6.0/charts/kube-prometheus-stack
   - name: kube-prometheus-stack
     repository: https://prometheus-community.github.io/helm-charts
-    version: 60.4.0
+    version: 62.6.0
     alias: operator
     condition: operator.enabled
+  #https://github.com/prometheus-community/helm-charts/tree/prometheus-stackdriver-exporter-4.6.0/charts/prometheus-stackdriver-exporter
+  - name: prometheus-stackdriver-exporter
+    repository: https://prometheus-community.github.io/helm-charts
+    version: 4.6.0
+    alias: prometheus-stackdriver-exporter
+    condition: prometheus-stackdriver-exporter.enabled
