--- a/chart_deps/app/common/values.yaml
+++ b/chart_deps/app/common/values.yaml
@@ -24,7 +24,11 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+pvcs: {}
+
 environment: {}
+
+initContainers: {}
 
 environmentFromSecrets: {}
 
