chart_deps:prometheus:probes add tpl function to spec + add probes chart as dep to argocd chart

--- a/charts/argocd/Chart.yaml
+++ b/charts/argocd/Chart.yaml
@@ -17,3 +17,8 @@ dependencies:
     repository: file://../chart_deps/redis/redis-operated
     alias: redis
     condition: redis.enabled
+  - name: probes
+    version: 0.1.0
+    repository: file://../chart_deps/prometheus/probes
+    alias: probes
+    condition: probes.enabled
