--- a/charts/chart_deps/prometheus/probes/values.yaml
+++ b/charts/chart_deps/prometheus/probes/values.yaml
@@ -2,32 +2,16 @@ nameOverride: ""
 fullnameOverride: ""
 
 probes: {}
-#  someconfigname:
-#    additionalLabels:
-#      alertmanager: coolAlertManager
+#  api:
+#    selector:
+#      prometheus: main
+#    enabled: false
 #    spec:
-#      https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#alertmanagerconfigspec
-#      receivers:
-#        - name: Reciever1
-#          slackConfigs:
-#            - sendResolved: true
-#              apiURL:
-#                name: secret
-#                key:  key
-#              channel: "#OMG_WTF"
-#              title: 'SOMETHING IS WRONG'
-#              text: >-
-#                {{ range .Alerts }}
-#                    *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
-#                    *Description:* {{ .Annotations.description }}
-#                    *Details:*
-#                    {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
-#                    {{ end }}
-#                {{ end }}
-#      route:
-#        receiver: 'Reciver1'
-#        groupWait: 30s
-#        groupInterval: 5m
-#        repeatInterval: 3h
-#        groupBy: [env, alertname]
-#        routes: []
+#      jobName: "api"
+#      module: http_2xx
+#      prober:
+#        url: prometheus-gcp-prd-prometheus-blackbox-exporter:9115
+#      targets:
+#        staticConfig:
+#          static:
+#            - https://api.prd.example.com/api/health
