Fix blackbox svc host

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -106,7 +106,7 @@ chart_apps:
     - name: "argo-cd.server.ingress.hostname"
       value: "argocd.{{ .Values.company.domain.env }}"
     - name: "global.svc.prometheus.blackbox"
-      value: "prometheus-{{ .Values.env.name }}-prometheus-blackbox-exporter"
+      value: "prometheus-{{ .Values.env.name }}-prometheus-blackbox-exporter.prometheus.svc.cluster.local"
     values: |
       argo-cd:
         controller:
