feature: probes as deps in argocd chart (#28)
* chart_deps:prometheus:probes add tpl function to spec + add probes chart as dep to argocd chart

* remove global.env from argocd instead add global.svc.prometheus.blackbox

* Fix argocd in environment chart

* Fix blackbox svc host

* add changelog

* reconsider version for this feature

* selector + prober to argocd values

--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -43,3 +43,23 @@ redis:
     enabled: false
     prometheusSelector:
       prometheus: main
+
+probes:
+  enabled: false
+  probes:
+    argocd:
+      enabled: false
+      selector:
+        prometheus: main
+      spec:
+        prober:
+          url: '{{ .Values.global.svc.prometheus.blackbox }}:9115'
+        jobName: argocd
+        module: http_2xx
+        targets:
+          ingress:
+            selector:
+              matchLabels:
+                app.kubernetes.io/name: 'argocd-server'
+            namespaceSelector:
+              any: true
