--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -1,4 +1,4 @@
-int:
+thanos:
   enabled: false
   existingObjstoreSecret: ""
   query:
@@ -10,71 +10,13 @@ int:
   compactor:
     enabled: false
     serviceAccount:
-      create: true
-      annotations: {}
+      create: false
+      name: thanos
   storegateway:
-    enabled: false
-  ruler:
-    enabled: false
-  recieve:
-    enabled: false
-  receiveDistributor:
-    enabled: false
-  metrics:
-    enabled: false
-  volumePermissions:
-    enabled: false
-  minio:
-    enabled: false
-  networkPolicy:
-    enabled: false
-prd:
-  enabled: false
-  existingObjstoreSecret: ""
-  query:
-    enabled: false
-  queryFrontend:
-    enabled: false
-  bucketweb:
-    enabled: false
-  compactor:
     enabled: false
     serviceAccount:
-      create: true
-      annotations: {}
-  storegateway:
-    enabled: false
-  ruler:
-    enabled: false
-  recieve:
-    enabled: false
-  receiveDistributor:
-    enabled: false
-  metrics:
-    enabled: false
-  volumePermissions:
-    enabled: false
-  minio:
-    enabled: false
-  networkPolicy:
-    enabled: false
-
-dev:
-  enabled: false
-  existingObjstoreSecret: ""
-  query:
-    enabled: false
-  queryFrontend:
-    enabled: false
-  bucketweb:
-    enabled: false
-  compactor:
-    enabled: false
-    serviceAccount:
-      create: true
-      annotations: {}
-  storegateway:
-    enabled: false
+      create: false
+      name: thanos
   ruler:
     enabled: false
   recieve:
