--- a/charts/chart_deps/rabbitmq/rabbitmq-users/values.yaml
+++ b/charts/chart_deps/rabbitmq/rabbitmq-users/values.yaml
@@ -2,7 +2,7 @@ users: {}
 #  chents:
 #    enabled: true
 #    cluster:
-#      name: rmq-gcp-prd
+#      name: rmq
 #      namespace: rabbitmq
 #    tags:
 #      - policymaker
