prometheus: set sa in chart values

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -250,6 +250,10 @@ prometheus-main:
   service:
     enabled: true
 
+  serviceAccount:
+    create: false
+    name: thanos
+
   servicemonitor:
     enabled: true
     prometheusSelector:
