--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -5,15 +5,23 @@ global:
     pspAnnotations: {}
 
   imagePullSecrets: []
-  #Used to render company specific templates
-  domain:
-    root: #example.com
-    env: #prd.example.com int.exmple.com dev.example.com etc
 
-  envs:
-    int:
-      natgw:
-
+  company:
+    name: #example
+    gcp:
+      enabled: false
+      bucket:
+        prefix:
+      project_id: #example-production
+    domain:
+      root: #example.com
+      env: #int.example.com, dev.example.com, prd.example.com etc
+    network:
+      int_nat_gw:
+  env:
+    name: #aws-prd or aws-int or aws-stg
+    server: #https://2.2.2.2
+    short_name: #pre/prd/int/dev/etc
 
 alertmanager-configs:
   enabled: false
