new stackdriver version

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -355,6 +355,9 @@ prometheus-postgres-exporter:
 
 prometheus-stackdriver-exporter:
   enabled: false
+  serviceAccount:
+    create: false
+    name: 'stackdriver-exporter'
   serviceMonitor:
     enabled: true
     namespace: prometheus
